# Sistema_Biblioteca

./: .travis.yml  CMakeLists.txt  README.md  almacen.cpp  almacen.h  categoria.cpp  categoria.h  libro.cpp  libro.h  main.cpp  prestamo.cpp  prestamo.h  sistema.cpp  sistema.h
Excepciones/: excepcion.cpp  excepcion.h  excepcionAutorNoEncontrado.cpp  excepcionAutorNoEncontrado.h  excepcionCargaDatos.cpp  excepcionCargaDatos.h  excepcionCategoriaNoEncontrada.cpp  excepcionCategoriaNoEncontrada.h  excepcionCsvIncorrecto.cpp  excepcionCsvIncorrecto.h
Persona/: autor.cpp  autor.h  cliente.cpp  cliente.h  persona.cpp  persona.h
Utils/: utils.cpp  utils.h
cereal-1.3.0/: CMakeLists.txt
data/: autores.csv  categorias.csv  clientes.csv  libros.csv  personas.csv  prestamos.csv  sample.csv
